tryna fix width alignment

--- a/style.css
+++ b/style.css
@@ -54,6 +54,6 @@ div.container
 	padding: 1em 1em;
 	text-align: left;
 	/*float:center;*/
-	background: #FFF;
+	background: #32FF00;
 	color: #3A3A3A;
 }
